# wi-system

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COWORK_SETUP.md  GETTING_STARTED.md  LICENSE  README.md  SCHEMA.md  SECURITY.md  START_HERE.md  TUTORIAL.md  improvements.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
_archive/: README.md
_archive/tests/: test_engine_smoke.py
_archive/wi_system/: llm.py  markdown.py
docs/: ADOPTION_GUIDE.md  ADVANCED.md  OBSIDIAN_GUIDE.md  TUTORIAL.md  USE_CASES.md
docs/examples/pasta-wiki/: README.md
docs/examples/research-wiki/: README.md
docs/legacy/: ADOPTION_GUIDE.md  README.md
examples/wi-workspace/: AGENTS.md  README.md
examples/wi-workspace/sources/: README.md
examples/wi-workspace/wiki/: README.md
template/: AGENTS.md  CLAUDE.md  index.md  log.md  sources.base  wiki.base
template/.claude/: settings.json
template/.claude/commands/: ingest.md  lint.md  synthesize.md
template/.obsidian/: graph.json
template/sources/: index.md  sources.md
template/sources/01-articles/: 01-articles.md  2026-06-28-react-flow-review.md  index.md
template/sources/02-videos/: 02-videos.md  2026-06-30-xyflow-talk.md  index.md
template/sources/03-conversations/: 03-conversations.md  2026-06-29-chatgpt-flow-comparison.md  index.md
template/sources/04-documents/: 04-documents.md  2026-07-01-react-flow-api-spec.md  index.md
template/sources/05-images/: 05-images.md  2026-07-01-react-flow-dashboard-screenshot.md  index.md
template/sources/06-audio/: 06-audio.md  2026-07-01-react-flow-podcast-notes.md  index.md
template/sources/Articles/: Articles.md
template/sources/Media/: Media.md
template/sources/Transcripts/: Transcripts.md
template/templates/: article.md  articles.md  audio.md  document.md  execution.md  image.md  individual.md  individuals.md  media.md  project.md  record.md  records.md  transcript.md  transcripts.md  video.md
template/wiki/: index.md  wiki.md
template/wiki/Execution/: Execution.md
template/wiki/Individuals/: Individuals.md
template/wiki/Records/: Records.md
template/wiki/entities/: entities.md  index.md  xyflow.md
template/wiki/projects/: dashboard-builder.md  index.md  projects.md
template/wiki/syntheses/: index.md  should-i-use-react-flow.md  syntheses.md
template/wiki/topics/: index.md  react-flow.md  topics.md
tests/: test_engine_smoke.py
tools/: __init__.py  search.py
wi_system/: __init__.py  cli.py  engine.py
