[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wi-system"
version = "0.1.0"
description = "Woven Intelligence System: local, LLM-maintained living wiki"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "WI-system" }]
license = { text = "MIT" }
keywords = ["llm", "knowledge-base", "wiki", "obsidian", "research", "rag"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering :: Information Analysis",
	"Topic :: Text Processing :: Markup",
]
dependencies = []

[project.scripts]
wi = "wi_system.cli:main"

[tool.setuptools]
packages = ["wi_system"]
