[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wi-system"
version = "1.0.0"
description = "LLM Wiki: a schema-driven knowledge base built with any AI agent"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jack5237" }]
license = { text = "MIT" }
keywords = ["llm", "knowledge-base", "wiki", "obsidian", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: News/Diary",
]
dependencies = []

[project.optional-dependencies]
tools = ["pytest>=7.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0", "mypy>=1.0"]

[project.urls]
"Homepage" = "https://github.com/Jack5237/wi-system"
"Documentation" = "https://github.com/Jack5237/wi-system#getting-started"
"Repository" = "https://github.com/Jack5237/wi-system"

[tool.setuptools]
packages = []
